# deepgo

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  genmove.c  handicap.c  interface.c  reading.c  utils.c
interface/: CMakeLists.txt  main.c  play_ascii.c  play_gtp.c  play_solo.c
patterns/: CMakeLists.txt
sgf/: CMakeLists.txt
